Don't prevent 'display: none' from working on generated content by being overzealous with CSS2 12.1 'display' fixups.  At suggestion of Mats Palmgren, split code path between CSS2 9.7 fixups and CSS2 12.1 fixups since the former can't affect generated content and the latter apply only to generated content.  r=bzbarsky and mats.palmgren  sr=kin  b=171749